--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -20,7 +20,6 @@ on:
         required: true
 
 env:
-  DOCKER_BUILDKIT: "1"
   IMAGE_BASE: ${{ inputs.registry }}/${{ inputs.repository }}
 
 jobs:
@@ -37,15 +36,21 @@ jobs:
       - name: Compute version tag
         id: compute_tag
         run: echo "tag=$(date +%s)" >> "$GITHUB_OUTPUT"
-      - name: Build image (${{ steps.compute_tag.outputs.tag }})
-        run: >-
-          docker build
-          -t ${{ env.IMAGE_BASE }}:latest
-          -t ${{ env.IMAGE_BASE }}:${{ steps.compute_tag.outputs.tag }}
-          --cache-from ${{ env.IMAGE_BASE }}:latest
-          --build-arg BUILDKIT_INLINE_CACHE=1
-          .
-      - name: Push image
-        run: docker push --all-tags ${{ env.IMAGE_BASE }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push image (${{ steps.compute_tag.outputs.tag }})
+        uses: docker/build-push-action@v6
+        env:
+          DOCKER_BUILD_CHECKS_ANNOTATIONS: false
+          DOCKER_BUILD_SUMMARY: false
+          DOCKER_BUILD_RECORD_UPLOAD: false
+        with:
+          push: true
+          tags: |
+            ${{ env.IMAGE_BASE }}:latest
+            ${{ env.IMAGE_BASE }}:${{ steps.compute_tag.outputs.tag }}
+          cache-from: type=registry,ref=${{ env.IMAGE_BASE }}:latest
+          pull: true
+          outputs: type=oci,dest=./image.tar
       - name: Output summary
         run: echo '${{ env.IMAGE_BASE }}:${{ steps.compute_tag.outputs.tag }}' >> $GITHUB_STEP_SUMMARY
