--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -49,13 +49,8 @@ jobs:
           tags: |
             ${{ env.IMAGE_BASE }}:latest
             ${{ env.IMAGE_BASE }}:${{ steps.compute_tag.outputs.tag }}
-          cache-from: |
-            type=registry,ref=${{ env.IMAGE_BASE }}:latest
-            type=gha,scope=docker-build
-          cache-to: |
-            type=registry,ref=${{ env.IMAGE_BASE }}:latest,mode=max
-            type=gha,scope=docker-build,mode=max
-          pull: true
+          cache-from: type=gha,scope=docker-build
+          cache-to: type=gha,scope=docker-build,mode=max
           outputs: type=oci,dest=./image.tar
       - name: Output summary
         run: echo '${{ env.IMAGE_BASE }}:${{ steps.compute_tag.outputs.tag }}' >> $GITHUB_STEP_SUMMARY
