--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -3,4 +3,5 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/.github/workflows"
     schedule:
-      interval: "weekly"
+      day: "monday"
+      time: "10:00"
