Limit to 1 concurrent "Bulid + deploy" job

--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -28,6 +28,9 @@ env:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    concurrency:
+      group: build-deploy
+      cancel-in-progress: false
     steps:
       - uses: actions/checkout@v5
       - name: Login to registry
