Also run "bundle install" after updating Ruby versions

--- a/.github/workflows/update-ruby-version.yaml
+++ b/.github/workflows/update-ruby-version.yaml
@@ -62,6 +62,9 @@ jobs:
             end
           ')
 
+      - name: Update bundle
+        run: bundle install
+
       - name: Generate branch name
         id: branch-name
         run: |
