Add step to configure Ruby before running bundle install

--- a/.github/workflows/update-ruby-version.yaml
+++ b/.github/workflows/update-ruby-version.yaml
@@ -61,6 +61,8 @@ jobs:
             end
           '
 
+      - uses: ruby/setup-ruby@v1
+
       - name: Update bundle
         run: bundle install
 
