--- a/.github/workflows/update-ruby-version.yaml
+++ b/.github/workflows/update-ruby-version.yaml
@@ -82,7 +82,7 @@ jobs:
         if: steps.latest-ruby.outputs.version != steps.current-ruby.outputs.version
         uses: peter-evans/create-pull-request@v7
         with:
-          title: "Update Ruby to ${{ steps.latest-ruby.outputs.version }}"
+          title: "Update Ruby from ${{ steps.current-ruby.outputs.version }} to ${{ steps.latest-ruby.outputs.version }}"
           commit-message: "Update Ruby from ${{ steps.current-ruby.outputs.version }} to ${{ steps.latest-ruby.outputs.version }}"
           branch: ${{ steps.branch-name.outputs.branch-name }}
           delete-branch: true
